# ML-Sandbox

./: .gitignore  ML_research.md  Makefile  README.md  requirements.txt
agentic_workflow/: README.md  processed_logs.md
agentic_workflow/dpe_optimization/: README.md  crewai_flow.html  pyproject.toml
agentic_workflow/dpe_optimization/sql_script/: test.sql
agentic_workflow/dpe_optimization/src/dpe_optimization/: main.py
agentic_workflow/dpe_optimization/src/dpe_optimization/crews/analyst_crew/: analyst_crew.py
agentic_workflow/dpe_optimization/src/dpe_optimization/crews/analyst_crew/config/: agents.yaml  tasks.yaml
agentic_workflow/dpe_optimization/src/dpe_optimization/crews/checker_crew/: checker_crew.py
agentic_workflow/dpe_optimization/src/dpe_optimization/crews/checker_crew/config/: agents.yaml  tasks.yaml
agentic_workflow/dpe_optimization/src/dpe_optimization/crews/solution_crew/: solution_crew.py
agentic_workflow/dpe_optimization/src/dpe_optimization/crews/solution_crew/config/: agents.yaml  tasks.yaml
agentic_workflow/dpe_optimization/src/dpe_optimization/tools/: custom_tool.py
agentic_workflow/poc/: .env.public  README.md  pyproject.toml  report.md
agentic_workflow/poc/knowledge/: database_detail.csv  database_detail.json  database_detail.txt
agentic_workflow/poc/src/poc/: crew.py  main.py
agentic_workflow/poc/src/poc/config/: agents.yaml  tasks.yaml
basic_nn/: README.md  basic_image_classification.ipynb  basic_text_classification.ipynb
credit_risk_inference/: model_dev.ipynb
docs/: DL_research.md  ML_evaluation.md  ML_research.md  (+1 more)
(+35 files in other folders)
