[project]
name = "dpe_optimization"
version = "0.1.0"
description = "dpe_optimization using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0",
]

[project.scripts]
kickoff = "dpe_optimization.main:kickoff"
plot = "dpe_optimization.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
