[project]
name = "poc"
version = "0.1.0"
description = "poc using crewAI"
authors = [{ name = "Patcharanat P.", email = "test@test.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0",
    "docling>=2.16.0",
]

[project.scripts]
poc = "poc.main:run"
run_crew = "poc.main:run"
train = "poc.main:train"
replay = "poc.main:replay"
test = "poc.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
